@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_publisher_place);
-use Test::More 'tests' => 28;
+use Test::More 'tests' => 29;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -140,3 +140,8 @@ is($ret, decode_utf8('Náchod'), encode_utf8("Publisher name '$input_publisher_p
 $input_publisher_place = decode_utf8('w Cieszynie');
 $ret = clean_publisher_place($input_publisher_place);
 is($ret, decode_utf8('Cieszyn'), encode_utf8("Publisher name '$input_publisher_place' after cleanup."));
+
+# Test.
+$input_publisher_place = decode_utf8('V Kroměříži');
+$ret = clean_publisher_place($input_publisher_place);
+is($ret, decode_utf8('Kroměříž'), encode_utf8("Publisher name '$input_publisher_place' after cleanup."));
